--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,6 +21,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  // "include": ["vite.config.ts"],
-  "include": ["server.ts"]
+  "include": ["vite.config.ts"]
 }
