--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.9",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
