--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.1.5",
-    "styled-components": "^6.1.15",
-    "systembolaget-api": "^1.2.0"
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
